add score ceiling for game win

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-2">
           <span id="roll" class="btn btn-danger btn-lg btn-block">Roll</span>
           <br>
-          <span id="hide" class="btn btn-warning btn-lg btn-block">Hold</span>
+          <span id="hold" class="btn btn-warning btn-lg btn-block">Hold</span>
         </div>
         <div class="col-md-5">
 
