--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
   </head>
   <body>
     <div class="container">
+      <h1>Pig Dice!</h1>
       <div class="row">
-        <div class="col-md-5">
-          <h2>Bank:</h2>
+        <div id="column1" class="col-md-5">
+          <h2>Player 1 Bank: <strong><span id="bank1"></span></strong></h2>
           <p><span id="player1-bank"></span></p>
-          <div id="#show">
-
+          <div id="#player1-stats">
+            <h4>Roll: <span id="roll1"></span></h4>
+            <h4>Current Score: <span id="score1"></span></h4>
           </div>
         </div>
-        <div class="col-md-2">
+        <div id="btnColumn" class="col-md-2">
           <span id="roll" class="btn btn-danger btn-lg btn-block">Roll</span>
           <br>
           <span id="hold" class="btn btn-warning btn-lg btn-block">Hold</span>
         </div>
-        <div class="col-md-5">
-
+        <div id="column2" class="col-md-5">
+          <h2>Player 2 Bank: <strong><span id="bank2"></span></strong></h2>
+          <p><span id="player2-bank"></span></p>
+          <div id="#player2-stats">
+            <h4>Roll: <span id="roll2"></span></h4>
+            <h4>Current Score: <span id="score2"></span></h4>
+          </div>
         </div>
       </div>
     </div>
